--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
-<h1>Welcome to the Harry Potter Fandom HQ!</h1>
+<main class='homepage'>
+  <section class='homepage-sec'>
+    <h1>Welcome to the Harry Potter Fandom HQ!</h1>
+    <div class="homepage-btns">
+      <p><%= link_to "Log In", "/login", class: "btn-style-1" %></p>
+      <p><%= link_to "Sign In", "/signup", class: "btn-style-1" %></p>
+    </div>
+  </section>
+</main>
