--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,10 @@
 <main class='homepage'>
+  <h1>Welcome to the Harry Potter Fandom HQ!</h1>
   <section class='homepage-sec'>
-    <h1>Welcome to the Harry Potter Fandom HQ!</h1>
     <div class="homepage-btns">
+      <p class="homepage-text">If you have an account please log in. Otherwise feel free to register.</p>
       <p><%= link_to "Log In", "/login", class: "btn-style-1" %></p>
-      <p><%= link_to "Sign In", "/signup", class: "btn-style-1" %></p>
+      <p><%= link_to "Sign Up", "/signup", class: "btn-style-2" %></p>
     </div>
   </section>
 </main>
