--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,7 @@
   </head>
 
   <body>
-    <section class="flags-bg">
-      <article class="bg-flag bg-1">
-      </article>
-      <article class="bg-flag bg-2">
-      </article>
-      <article class="bg-flag bg-3">
-      </article>
-      <article class="bg-flag bg-4">
-      </article>
-    </section>
+    <img src="https://wallpaperaccess.com/full/22924.jpg" class="bg-img"/>
     <%= yield %>
   </body>
 </html>
