Add test for user and homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <section class='homepage-sec'>
     <div class="homepage-btns">
       <p class="homepage-text">If you have an account please log in. Otherwise feel free to register.</p>
-      <p><%= link_to "Log In", "/login", class: "btn-style-1" %></p>
+      <p><%= link_to "Login", "/login", class: "btn-style-1" %></p>
       <p><%= link_to "Sign Up", "/signup", class: "btn-style-2" %></p>
     </div>
   </section>
